# apex-fsw

./: .gitignore  CLAUDE.md  notes.md
sim/: README.md  pyproject.toml
sim/apex_sim/: __init__.py
sim/apex_sim/analysis/: __init__.py  compare.py  openrocket_runner.py
sim/apex_sim/config/: __init__.py  loader.py
sim/apex_sim/hil/: __init__.py  emulator.py  fake_teensy.py  link.py  protocol.py  runner.py
sim/apex_sim/logs/: __init__.py  decoder.py
sim/apex_sim/sensors/: __init__.py
sim/apex_sim/sim/: __init__.py  airbrakes.py  environment.py  flight.py  rocket.py
sim/config/: airbrakes.yaml  environment.yaml  rocket.yaml
sim/config/sites/: irec_2026_pecos_tx.yaml  seymour_tx_2026_05_24.yaml
sim/data/flights/seymour_2026_05_24/: README.md  (+5 more)
sim/data/motor/: N3355_FINAL_FromStaticFireData2_notsmoothed.eng
sim/data/openrocket/: Team307_TexasTechUniversity_PR3.ork
sim/docs/sensors/: adxl375_high_g_accelerometer.md  bmp581_barometer.md  icm45686_imu.md  max_m10s_gps.md  mmc5983ma_magnetometer.md  rf4463pro_433_radio.md
sim/matlab/: README.md  monte_carlo_4_23_2026.m  rocket_sim_4_23_26.m
sim/scripts/: decode_logs.py  hil_selftest.py  horizon.py  monitor.py  radio_diag.py  radio_gfsk_rx.py  radio_ook_rx.py  run_hil.py  run_replay.py  run_sim.py
sim/scripts/horizon_app/: __init__.py  connection.py  constants.py  log_panel.py  main_window.py  paths.py  state_panel.py  theme.py  widgets.py  workers.py
sim/tests/: test_fusion_cf_stability.py  test_hil.py  test_hil_flight_replay.py  test_horizon_app.py  test_log_decoder.py  test_radio_gfsk_rx.py
(+33 files in other folders)
