[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-sim"
version = "0.1.0"
description = "RocketPy-based HIL simulation for the Apex flight computer (Texas Tech Team 307, IREC 2026)"
requires-python = ">=3.9"
dependencies = [
    "rocketpy>=1.4",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "openpyxl>=3.1",        # Blue Raven .xlsx deploy config
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apex_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
